Neuen APIv2-Endpunkt dataset/export angelegt
Neues Routes angelegt für den Export in einem bestimmten Schema, API-Dokumentation erweitert, swagger.yml angepasst
