# api/v2/docs/swagger.yaml
@@ -294,12 +294,8 @@ paths:
     get:
       tags:
         - dataset
-      summary: Export dataset as XML
-      description: |
-        Export a dataset as XML file in different metadata schemes. Available schemes are:
-        * DataCite - for DOI registration and citation
-        * ISO 19115 - for geospatial metadata
-        * DIF - Directory Interchange Format for NASA's GCMD
+      summary: View dataset as XML
+      description: View a dataset as XML in different metadata schemes
       operationId: exportDataset
       parameters:
         - name: id
@@ -319,14 +315,6 @@ paths:
               - datacite
               - iso
               - dif
-            example: datacite
-        - name: download
-          in: query
-          description: If true, the response will be downloaded as a file
-          required: false
-          schema:
-            type: boolean
-            default: false
       responses:
         "200":
           description: Successful operation
@@ -335,53 +323,40 @@ paths:
               schema:
                 type: string
                 format: binary
-              examples:
-                datacite:
-                  summary: DataCite XML example
-                  value: |
-                    <?xml version="1.0" encoding="UTF-8"?>
-                    <resource xmlns="http://datacite.org/schema/kernel-4">
-                      <identifier identifierType="DOI">10.5880/GFZ.4.1.2023.001</identifier>
-                      <!-- Additional DataCite XML content -->
-                    </resource>
-                iso:
-                  summary: ISO 19115 XML example
-                  value: |
-                    <?xml version="1.0" encoding="UTF-8"?>
-                    <gmd:MD_Metadata xmlns:gmd="http://www.isotc211.org/2005/gmd">
-                      <!-- ISO 19115 XML content -->
-                    </gmd:MD_Metadata>
-                dif:
-                  summary: DIF XML example
-                  value: |
-                    <?xml version="1.0" encoding="UTF-8"?>
-                    <DIF xmlns="http://gcmd.gsfc.nasa.gov/Aboutus/xml/dif/">
-                      <!-- DIF XML content -->
-                    </DIF>
-        "400":
-          description: Invalid ID or scheme supplied
+
+  /dataset/export/{id}/{scheme}/download:
+    get:
+      tags:
+        - dataset
+      summary: Download dataset as XML
+      description: Download a dataset as XML file in different metadata schemes
+      operationId: exportDatasetDownload
+      parameters:
+        - name: id
+          in: path
+          description: ID of the dataset to export
+          required: true
+          schema:
+            type: integer
+            format: int64
+        - name: scheme
+          in: path
+          description: Metadata scheme for the export
+          required: true
+          schema:
+            type: string
+            enum:
+              - datacite
+              - iso
+              - dif
+      responses:
+        "200":
+          description: Successful operation
           content:
-            application/json:
+            application/octet-stream:
               schema:
-                $ref: "#/components/schemas/Error"
-              example:
-                error: "Invalid metadata scheme. Supported schemes are: datacite, iso, dif"
-        "404":
-          description: Dataset not found
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-              example:
-                error: "Dataset with ID 123 not found"
-        "500":
-          description: Internal server error
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Error"
-              example:
-                error: "Error transforming dataset to XML"
+                type: string
+                format: binary
 components:
   schemas:
     TimezonesUpdateResponse:
